Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/AC__c.field-meta.xml
<CustomField>
    <fullName>AC__c</fullName>
    <label>Acre</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>