Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/AL__c.field-meta.xml
<CustomField>
    <fullName>AL__c</fullName>
    <label>Alagoas</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>