Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <label>Amazonas</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>