Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/AP__c.field-meta.xml
<CustomField>
    <fullName>AP__c</fullName>
    <label>Amapá</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>