Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/BA__c.field-meta.xml
<CustomField>
    <fullName>BA__c</fullName>
    <label>Bahia</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>