Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/CE__c.field-meta.xml
<CustomField>
    <fullName>CE__c</fullName>
    <label>Ceará</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>