Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/DF__c.field-meta.xml
<CustomField>
    <fullName>DF__c</fullName>
    <label>Distrito Federal</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>