Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/ES__c.field-meta.xml
<CustomField>
    <fullName>ES__c</fullName>
    <label>Espírito Santo</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>