Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/GO__c.field-meta.xml
<CustomField>
    <fullName>GO__c</fullName>
    <label>Goiás</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>