Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/MA__c.field-meta.xml
<CustomField>
    <fullName>MA__c</fullName>
    <label>Maranhão</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>