Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/MG__c.field-meta.xml
<CustomField>
    <fullName>MG__c</fullName>
    <label>Minas Gerais</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>