Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/MS__c.field-meta.xml
<CustomField>
    <fullName>MS__c</fullName>
    <label>Mato Grosso do Sul</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>