Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/MT__c.field-meta.xml
<CustomField>
    <fullName>MT__c</fullName>
    <label>Mato Grosso</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>