Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PA__c.field-meta.xml
<CustomField>
    <fullName>PA__c</fullName>
    <label>Pará</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>