Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PB__c.field-meta.xml
<CustomField>
    <fullName>PB__c</fullName>
    <label>Paraíba</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>