Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PE__c.field-meta.xml
<CustomField>
    <fullName>PE__c</fullName>
    <label>Pernambuco</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>