Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PI__c.field-meta.xml
<CustomField>
    <fullName>PI__c</fullName>
    <label>Piauí</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>