Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PR__c.field-meta.xml
<CustomField>
    <fullName>PR__c</fullName>
    <label>Paraná</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>