Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PrecoFabrica__c.field-meta.xml
<CustomField>
    <fullName>PrecoFabrica__c</fullName>
    <label>Preço de fábrica</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>