Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PrecoGeral__c.field-meta.xml
<CustomField>
    <fullName>PrecoGeral__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Preço Geral</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>