Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/PrincipioAtivo__c.field-meta.xml
<CustomField>
    <fullName>PrincipioAtivo__c</fullName>
    <formula>Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Princípio ativo do produto</label>
    <type>Text</type>
</CustomField>