Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/RJ__c.field-meta.xml
<CustomField>
    <fullName>RJ__c</fullName>
    <label>Rio de Janeiro</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>