Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/RN__c.field-meta.xml
<CustomField>
    <fullName>RN__c</fullName>
    <label>Rio Grande do Norte</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>