Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/RO__c.field-meta.xml
<CustomField>
    <fullName>RO__c</fullName>
    <label>Rondônia</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>