Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/RR__c.field-meta.xml
<CustomField>
    <fullName>RR__c</fullName>
    <label>Roraima</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>