Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/RS__c.field-meta.xml
<CustomField>
    <fullName>RS__c</fullName>
    <label>Rio Grande do Sul</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>