Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <label>Santa Catarina</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>