Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/SE__c.field-meta.xml
<CustomField>
    <fullName>SE__c</fullName>
    <label>Sergipe</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>