Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/SP__c.field-meta.xml
<CustomField>
    <fullName>SP__c</fullName>
    <label>São Paulo</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>