Git Tests/force-app/main/default/default/objects/PricebookEntry/fields/TO__c.field-meta.xml
<CustomField>
    <fullName>TO__c</fullName>
    <label>Tocantins</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>